--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
 <body>
    <div class="content">
        {% block content %}{% endblock content %}
-   </div>
+    </div>
+
+    <script src="{{url_for('static', filename='js/script.js')}}" ></script>
 </body>
 </html>
