--- a/templates/gaaaame.html
+++ b/templates/gaaaame.html
@@ -4,10 +4,12 @@
 
     <h1>Guess the number between 0 and 100</h1><br>
         <form action="" method="POST">
-            <input type="text" placeholder="number...">
-            <input type="submit" value="start">
-            <input type="submit" value="i'm done">
+            <input type="text" placeholder="number..." id="enterNumber" >
+            <input type="submit" value="Check" id="submit" >
+            <button  onclick="location='/'">done</button>
+            <p id="show"></p>
         </form>
 
+
 </div>
-{% endblock content %}
+{% endblock content %}m
